--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,7 +67,7 @@
   --bs-link-hover-color: #003e6b;
 }
 
-/* Global styles */
+
 * {
   box-sizing: border-box;
 }
@@ -94,7 +94,7 @@ a:hover {
   color: var(--bs-link-hover-color);
 }
 
-/* Skip links */
+
 .skip-links ul {
   list-style-type: none;
   margin: 0;
@@ -114,7 +114,6 @@ a:hover {
   z-index: 9999;
 }
 
-/* Logo and site title */
 .site-title {
   display: flex;
   align-items: center;
@@ -135,7 +134,6 @@ a:hover {
   border-right: 13px solid transparent;
 }
 
-/* Utility */
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -155,8 +153,8 @@ svg {
   height: 1.5rem;
 }
 
-/* Global header */
 .global-header {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -171,24 +169,114 @@ svg {
   gap: 1rem;
 }
 
+
 .global-nav {
-  margin-top: 1rem;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  right: 0;
+  background-color: var(--bs-black);
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.4s ease-in-out;
 }
 
-.global-nav__list {
-  list-style: none;
-  padding: 0;
-  display: flex;
-  gap: 1rem;
+.global-nav.show {
+  max-height: 100vh;
 }
 
-.global-nav__split-button {
+
+.global-nav__toggle {
+  background: none;
+  border: none;
+  color: var(--bs-white);
+  cursor: pointer;
+  font-size: 1rem;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
 
-/* Park header */
+.global-nav__toggle:hover {
+  opacity: 0.8;
+}
+
+
+.global-nav__toggle--close {
+  display: none;
+}
+
+
+.global-nav__toggle[aria-expanded="false"] > .global-nav__toggle--close {
+  display: none;
+}
+
+.global-nav__toggle[aria-expanded="true"] > .global-nav__toggle--open {
+  display: none;
+}
+
+.global-nav__toggle[aria-expanded="true"] > .global-nav__toggle--close {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.global-nav__toggle[aria-expanded="false"] > .global-nav__toggle--open {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.global-nav__section-heading {
+  color: var(--bs-white);
+  font-size: 1.2rem;
+  margin: 1rem 2rem 0.5rem;
+  padding: 0.5rem 0;
+  border-bottom: 1px solid var(--bs-grey-3);
+}
+
+.global-nav__list {
+  list-style: none;
+  padding: 0;
+  margin: 0 2rem 1rem;
+}
+
+.global-nav__list li {
+  border-bottom: 1px solid var(--bs-grey-5);
+}
+
+.global-nav__split-button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.global-nav__split-button a {
+  color: var(--bs-white);
+  padding: 1rem;
+  flex-grow: 1;
+  display: block;
+}
+
+.global-nav__split-button a:hover {
+  background-color: var(--bs-grey-4);
+}
+
+.global-nav__split-button__toggle {
+  background: none;
+  border: none;
+  color: var(--bs-white);
+  cursor: pointer;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+}
+
+.global-nav__split-button__toggle:hover {
+  background-color: var(--bs-grey-4);
+}
+
 #park-header {
   background-image: url('https://www.nps.gov/common/uploads/structured_data/3C7D5920-1DD8-B71B-0B83F012ED802CEA.jpg');
   background-size: cover;
@@ -205,19 +293,15 @@ svg {
   margin: 0;
 }
 
-/* Park header icons */
 #park-header svg {
   width: 2rem;
   height: 2rem;
   margin-right: 0.5rem;
 }
 
-/* Responsive */
 @media (max-width: 768px) {
   .global-header {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1rem;
+    flex-wrap: wrap;
   }
 
   #park-header {
